2007-11-29 Sancho Lerena <slerena@gmail.com>

	* Added support to notify by mail (only incidentes at this tiem)


2007-11-28 Sancho Lerena <slerena@gmail.com>

	* operation/incidents/incident.php, incident_detail.php,
	 incident_create_work.php: Fixed some issues with incidents.

	* operation/projects/task_workunit.php, project.php: Fixed
	ACL issues with workunits.

	* include/functions_form.php, functions_db.php, functions.php:
	Code cleanup and other.

2007-11-19 Sancho Lerena <slerena@gmail.com>

	* user_spare_workunit.php: Fixed problems in spare wu.

	* task_workunit.php, task_create_work.php: Several fixes.

	* calendar.php, sidemenu.php, monthly.php: Now can navigate to 
	next/prev month and it's linked from side menu as default 
	reporting option. Fixed calculation for first day of week.

	* include/functions_form.php: List of tasks includes project name.

2007-11-16 Sancho Lerena <slerena@gmail.com>

        * topidb.sql: Added disabled field to projects. No real delete,
        this is used to mark for "non visible". Real delete should imply
        delete associated tasks and workunits, I think should not been
        implemented

        * user_workunit_report.php: Implemented full content view for
        single workunits marked to see full lenght.

        * projects.php: Now it's possible to mark for disabled projects.
        Projects disabled are not seen in that view.

        * monthly.php: New detailed view for workunits mapped over
        a month graph. Multiuser, multidates, with some ACL check.

        * report_*: Fixed to work with ACL and multi dates.

        * side_menu.php: Updated to work new reporting options for all.

        * language_en.php: Updated strings.

        * avatars/*: Some new added :)

        * task.php: Fixed bug (forget to commit) to view nested tasks

2007-09-03  Sancho Lerena  <slerena@artica.es>

	As usual too many changes to describe it :-)

	* Added gantt graphic.

	* Added support to milestones.
